--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                                 <div class="col-4">
                                     <small class="text-muted">ใบที่</small>
                                     <h5 id="outSheet">...</h5>
+                                    <small class="text-muted">อาจไม่ตรง</small>
                                 </div>
                             </div>
                         </div>
@@ -335,3 +336,4 @@
 
 </body>
 </html>
+
